@@ -2,10 +2,15 @@ AUX modprobe_i915.conf 85 RMD160 7a897deae5fa6c952def82d57af86e4768c8978d SHA1 0
 DIST calculate-sources-2.6.32.tar.bz2 133992 RMD160 6c8ad119807c591ad926435dad7986098f26e3ef SHA1 2b398bf6e9a6bceca26e3df42c471c9321c0a6f2 SHA256 b30e70642569bae7dff4c9b2046066774c6a8e2a2c1252b353b908824cf64bc4
 DIST calculate-sources-2.6.34.tar.bz2 116866 RMD160 43bc5502268093bc1a1d3561840b91143656e30e SHA1 5e36f5a8cc3d917b2f9c277718510923ad8c4788 SHA256 518027ec18f1374901e1e9701e1062b4abdd451eab0d13c98eaedb6cff0baee6
 DIST deblob-2.6.32 84094 RMD160 394f46ec5b869638a7bc2e87beb118167c9bd6cb SHA1 1a2a1efb72126609d9e3b9be99ae5be2751efd06 SHA256 de625f0bd221c9c38d4453f1b709622f222d86a0ae9350d2b7b0e17795e6de6d
+DIST deblob-2.6.34 88276 RMD160 12f83200b74a9d859b7241b1e8d8c0250d8bcb90 SHA1 985bd73ebca8e720f92eb01d11c22e25d21865b6 SHA256 9478ada7a36f3858ef9ba3dc5c9609fb45fa9b286a002ccfba09045c81b217ed
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST linux-2.6.34.tar.bz2 67633622 RMD160 dafd721b00c13e3652405b517b379eed10020bf4 SHA1 4188857ba71f301991dc56285f593e9c311e5824 SHA256 fa395fec7de633df1cb85b6248b8f35af98380ed128a8bc465fb48bc4d252633
 DIST patch-2.6.32.15.bz2 423031 RMD160 6b57e2aaf685064950e49aa33e9fcb7bd122da53 SHA1 6a321d7be3c02d846e8cf1f9cb3bd745148f1163 SHA256 862392da7f5b114317babbbbb657838d09b77d89251a18aa6e653e7239f0a634
+DIST patch-2.6.32.16.bz2 459292 RMD160 e75e75018bc500c1986b059a1620c2592baa65dd SHA1 4c7d19c9bd3f102a41047b9ef04eaab73c62f3b0 SHA256 e744aaa87d2daee6d10b76f411d9efa13db24f779981890b482d72364694aa08
+DIST patch-2.6.34.1.bz2 70881 RMD160 94b4faca145cc536102ba027b901d47c98afb810 SHA1 ac6912889999070436a111c6b93baa9d4e6a727f SHA256 2111ec1aa6e506eaa9955b6c3f14baf449a0b90a5f665e3fad6e3fe4142041cb
 EBUILD calculate-sources-2.6.32.15.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
+EBUILD calculate-sources-2.6.32.16.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
+EBUILD calculate-sources-2.6.34.1.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
 EBUILD calculate-sources-2.6.34.ebuild 783 RMD160 19f93c1d21a48c469cd0a39ccc523e1fd575cfad SHA1 d0d068c652e2104a5094dc6e3cf908f2d103cc16 SHA256 e325301fe36bbc8bf2a32303e5b26d7bb20fa786ede81605c376e45864be175e
 MISC ChangeLog 1356 RMD160 35f9fcefc28788e10d594f001e415ff642eb0c75 SHA1 4c5398d8387fdcfdfb823239749ce5599281609c SHA256 cd88428b429c8a995ebde67e9c71105e131e0fdb8f8a485876cb9f7471be0139
 MISC metadata.xml 364 RMD160 308abbf758102b5591c353f41a62be6836f98693 SHA1 5029bd7cf897e4eb8f8e8fa935c02d4c73eb59db SHA256 0bee25282d797e432206373a8535689412a3f76f8974315f8ecf73536bf0e505
