@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.34.1 (06 Jul 2010)
+*calculate-sources-2.6.32.16 (06 Jul 2010)
+
+  06 Jul 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-sources-2.6.32.16.ebuild, +calculate-sources-2.6.34.1.ebuild:
+  version bumps
+
 *calculate-sources-2.6.34 (10 Jun 2010)
 
   10 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
